--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-material-ui-form-validator": "^2.0.10",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-sortable-hoc": "^1.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
